# legal-judge-ai

./: .gitignore  DEPLOYMENT_GUIDE.md  ENCRYPTION_SECRETS_SETUP.md  EXECUTION_GUIDE.md  PROGRESS_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_EXECUTION_STEPS.md  QUICK_START.md  README.md  SECURITY_ANALYSIS.md  SECURITY_FIXES_EXAMPLES.py  SECURITY_FIXES_IMPLEMENTED.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_PHASE2_COMPLETE.md  SECURITY_PHASE3_COMPLETE.md  SECURITY_QUICKSTART.md  SECURITY_RISK_MATRIX.txt  SECURITY_SUMMARY.md  SECURITY_VULNERABILITY_ANALYSIS.md  SESSION_SUMMARY.md  SETUP.md  SYSTEM_INTEGRATION_COMPLETE.md  SYSTEM_VERIFICATION_REPORT.md  TASK_11_VERIFICATION.md  TLS_HTTPS_SETUP.md  docker-compose.yml  quick_start.bat  requirements.txt  start_complete_system.py  test_complete_system.py
frontend-v2/: index.html  package-lock.json  package.json
frontend-v2/src/: App.jsx  index.css
ocr-service/: Dockerfile  main.py
python-services/: .env.example  .env.security.example  Dockerfile  IMPLEMENTATION_LOG.md  README.md  TESTING.md  __init__.py  demo_auto.py  demo_simulation.py  generate_token.py  main.py  orchestrator_api.py  requirements.txt  run_tests.py  security_scan.py  start_all_services.py  start_services.py  test_models_quick.py
python-services/embedding_service/: __init__.py  main.py  service.py
python-services/ingestion_service/: __init__.py  main.py  service.py
python-services/opinion_service/: __init__.py  main.py  service.py
rust-api/: .env.example  Cargo.toml  Dockerfile
rust-api/src/: main.rs  models.rs
scripts/: ingest_vectors.py
(+32 files in other folders)
