[package]
name = "legal-judge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
tempfile = "3.8"

# Logging and tracing
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Rate limiting
tower = { version = "0.4", features = ["limit", "buffer"] }
governor = "0.6"

# Configuration
dotenv = "0.15"

# Vector database (optional for direct access)
qdrant-client = "1.7"

# ML framework (optional for future Rust-based ML)
burn = { version = "0.16.0", features = ["train", "wgpu"], optional = true } 
burn-ndarray = { version = "0.16.0", optional = true }

[features]
default = []
ml = ["burn", "burn-ndarray"]
